<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.edu.usth.crabfood.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dailymeal"
        android:name="vn.edu.usth.crabfood.ui.dailymeal.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="vn.edu.usth.crabfood.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="vn.edu.usth.crabfood.ui.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>