<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.usth.crabfood.ui.CartFragment">

    <TextView
        android:id="@+id/my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:text="@string/my_cart"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#FA4D2A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cart"
        app:layout_constraintWidth_percent=".6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_rec"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:listitem="@layout/cart_item_layout" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#FA4D2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_rec"
        app:layout_constraintWidth_percent=".6"
        android:layout_marginTop="5dp"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/total_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/total_label"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/total_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/sample_total_price"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:padding="14dp"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".8"/>

</androidx.constraintlayout.widget.ConstraintLayout>
