<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGray"
    android:paddingTop="5dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:background="@drawable/search_bg"
            android:drawableRight="@drawable/baseline_search_24"
            android:paddingRight="9dp"
            android:fontFamily="@font/amita"
            android:hint="@string/search_your_food"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"

            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="7dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_bg"
            android:src="@drawable/baseline_person"
            app:layout_constraintBottom_toBottomOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/amarante"
            android:text="@string/hello_ali"
            android:textColor="@color/white"
            android:textSize="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginLeft="6dp"
            android:fontFamily="@font/amita"
            android:text="@string/what_do_you_want"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_hor_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_ver_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_hor_rec" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>