<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_radial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/waveTop"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:src="@drawable/wave_top"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:shadowColor="#80000000"
        android:background="@drawable/text_backdrop"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/Appdes"
        android:background="@drawable/text_backdrop"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:letterSpacing="0.02"
        android:shadowColor="#80000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="6"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ctaPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="#33FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overlay"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#40FFFFFF"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="2dp"
                app:backgroundTint="@color/orange"
                android:fontFamily="@font/acme"
                android:onClick="Login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:background="@drawable/btn_primary_radial" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/orange"
                android:fontFamily="@font/acme"
                android:onClick="Registry"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_primary_radial" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>